--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Marp Presentation
 on:
   push:
     branches:
-      - main
+      - master
 
 permissions:
   contents: read
