--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Marp Presentation
+name: Build and Deploy Slidev Presentation
 
 on:
   push:
@@ -22,23 +22,15 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install Marp CLI
-        run: npm install -g @marp-team/marp-cli
+      - name: Install dependencies
+        run: npm install
 
-      - name: Build Marp presentation
-        run: |
-          marp wasm-charla.md --html --output index.html
+      - name: Build Slidev presentation
+        run: npm run build
 
-      - name: Copy other assets
-        run: |
-          mkdir -p public
-          cp -r ejemplos public/ejemplos
-          cp -r index.html README.md wasm-charla.md public/
-          cp -r assets public/assets
-      
-      - name: Upload to GitHub Pages
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: ./dist
 
