--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "@slidev/cli": "^0.50.0",
     "slidev-theme-excali-slide": "^1.0.0"
+  },
+  "slidev": {
+    "base": "/wasm_lesson/"
   }
 }
