--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "slidev"
   },
   "dependencies": {
-    "@slidev/cli": "^0.50.0"
+    "@slidev/cli": "^0.50.0",
+    "@slidev/theme-apple-basic": "^0.25.1",
+    "@slidev/theme-seriph": "^0.25.0",
+    "slidev-component-spotlight": "^1.1.0"
   }
 }
